[2008-10-13]
- starting Twitter search from last tweet upwards

[2008-10-15]
- adding a tracking for every root tweet
- adding a note for every root tweet