@@ -1,8 +1,8 @@
-## start note
+## extend a note
 
-## conduct trackings
-## extend or finish note
+## finish a note
+## post snote tweet
+
 ## daemon: search
 ## daemon: conduct trackings
 ## daemon: finish old and open trackings
-## post snote tweet
