@@ -1,3 +1,16 @@
+# == Schema Information
+# Schema version: 20081015220358
+#
+# Table name: notes
+#
+#  id         :integer(11)     not null, primary key
+#  tweet_id   :integer(11)
+#  header     :string(255)
+#  url        :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 class Note < ActiveRecord::Base
   
   validates_presence_of :tweet_id
