@@ -4,3 +4,7 @@
 [2008-10-15]
 - adding a tracking for every root tweet
 - adding a note for every root tweet
+
+[2008-10-18]
+- may conduct the trackings
+
